change models, improve UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta viewport="width=device-width, initial-scale=1.0">
     <title>Cardano Smart</title>
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v=3.0">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -45,13 +45,6 @@
         </form>
         <div class="options-container">
             <div class="left-options">
-                <div class="context-switch">
-                    <input type="checkbox" id="useContext" name="useContext" checked>
-                    <label for="useContext" class="switch">
-                        <span class="slider"></span>
-                        <span class="switch-text">Use Context</span>
-                    </label>
-                </div>
                 <button class="references-button">
                     <i class="fas fa-chevron-up"></i>
                     <span>Show References</span>
