fix markdown bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/haskell.min.js"></script>
     <script>hljs.highlightAll();</script>
     <script src="https://kit.fontawesome.com/f30fff1d76.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
     <script src="/js/thinking.js"></script>
 </head>
